--- a/AJKs.html
+++ b/AJKs.html
@@ -49,7 +49,8 @@
             <pre>Position: Assistant Funds Manager</pre>
             <pre>    Class: 4SC</pre>
             <hr>
-            <a href="index.html">
+            <a href="index.html"
+            class="creations">
             Return To Main Page
             </a>
         </body>
