--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <title class="title">Phor Tay Youtuber Club</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Ubuntu+Mono&display=swap" rel="stylesheet">
-        </head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    </head>
     <body>
         <img src="photo_2022-04-09_11-14-21-removebg-preview.png"
         height="60">
